--- a/no-retina-burn-kitsu.io.css
+++ b/no-retina-burn-kitsu.io.css
@@ -1,5 +1,3 @@
-@namespace url(http://www.w3.org/1999/xhtml);
-
 @-moz-document domain("kitsu.io") {
   /*
   Give things a dark background and white text.
@@ -103,6 +101,30 @@
   */
   .entry-rating {
     font-size: 14px !important;
+  }
+  /*
+  Make the star and notifications icon white.
+  */
+  .entry-rating-star svg path, .notifications svg path {
+    fill: white !important;
+  }
+  /*
+  Make the search svg gray.
+  */
+  .site-search__icon path {
+    fill: #545d69 !important;
+  }
+  /*
+  But make it white again when the navbar is clear.
+  */
+  .transparent .site-search__icon path {
+    fill: white !important;
+  }
+  /*
+  Remove the intercom button
+  */
+  iframe {
+    display: none !important;
   }
   /*
   Make the navbar background be transparent at the top,
