--- a/no-retina-burn-kitsu.io.css
+++ b/no-retina-burn-kitsu.io.css
@@ -5,7 +5,8 @@
   .global-row, .primary-nav, .cover-nav, .library-list, .library-entry, .entry-wrapper.row,
   .add-comment-wrapper, .stream-item-comments, .stream-error-wrapper, body, .d-inline,
   .new-comment, .media-posters, .quick-update, .comment-actions, .library-sorting,
-  .search--results, .search--group-header, .entry-wrapper.row:hover{
+  .search--results, .search--group-header, .entry-wrapper.row:hover, .modal-content,
+  .dropdown-item {
     background: rgb(39, 44, 51) !important;
     border-color: rgb(39, 44, 51) !important;
     color: white !important;
@@ -20,9 +21,12 @@
   .checklist, .panel-heading, .nav-tabs, .favorite-placeholder,
   .footer-social, .dropdown-menu, .feed-actions .card,
   .d-inline .active, .user-menu-drop .dropdown-item,
-  .settings--header, .settings--section-head,
+  .settings--header, .settings--section-head, .media--sidebar,
   .typeahead-item-container, .tag-primary, .tagged-media,
-  .favorite-series-panel .active, .search--header {
+  .favorite-series-panel .active, .search--header,
+  .rating-wrapper, .review-media-progress, .media-rankings,
+  .media--category-tag a, .rating-box, .entry-progress--mini-wrapper,
+  .media--alt-titles h5, .media--information h5 {
     background: rgb(39, 44, 51) !important;
     border-color: #545d69 !important;
     border-width: 1px !important;
@@ -49,10 +53,10 @@
     color: white !important;
   }
   /*
-  Give search results transition on hover. This tells them to transition
-  to a lighter background.
+  Give search results and other dropdown elements transition on hover. 
+  This tells them to transition to a lighter background.
   */
-  .search--results li:hover {
+  .search--results li:hover, .dropdown-item:hover {
     background: #545d69 !important;
   }
   /*
@@ -111,6 +115,19 @@
   */
   .author-secondary, .media-title {
     color: white !important;
+  }
+  /*
+  Remove the left border on the heart button next to the
+  ratings stars.
+  */
+  .media-favorite {
+    border-left: 0px !important;
+  }
+  /*
+  Remove the bottom border below the header of reviews.
+  */
+  .author-header {
+    border-bottom: 0px !important;
   }
   /*
   The global container on the anime and manga page
